// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Addons/Docs with some emoji 1`] = `
<storybook-wrapper>
  <storybook-button-component
    _nghost-a-c6=""
    ng-reflect-text="😀 😎 👍 💯"
  >
    <button
      _ngcontent-a-c6=""
    >
      😀 😎 👍 💯
    </button>
  </storybook-button-component>
</storybook-wrapper>
`;

exports[`Storyshots Addons/Docs with text 1`] = `
<storybook-wrapper>
  <storybook-button-component
    _nghost-a-c5=""
    ng-reflect-text="Hello Button"
  >
    <button
      _ngcontent-a-c5=""
    >
      Hello Button
    </button>
  </storybook-button-component>
</storybook-wrapper>
`;
